<resources>
    <string name="app_name">Wallpapers Home</string>
    <string name="search_action">Search</string>
    <string name="latest_screen_label">Latest</string>
    <string name="toplist_screen_label">Top list</string>
    <string name="random_screen_label">Random</string>
    <string name="filter_action">Filter</string>
    <string name="network_error_retry_button">Retry</string>
    <string name="wait_a_bit_please">Wait a bit, please…</string>
    <string name="detailed_screen_set_as_wallpaper_button">Set as wallpaper</string>
    <string name="detailed_screen_download_button">Download</string>
    <string name="detailed_screen_share_button">Share</string>
    <string name="search">Search</string>
    <string name="search_screen_text_hint">Text</string>
    <string name="search_screen_tag_hint">Tag</string>
    <string name="search_screen_apply_filter_button">Apply</string>
    <string name="search_screen_reset_filter_button">Reset</string>
    <string name="detailed_screen_get_image_error">Error getting image file</string>
</resources>