<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fancy_background">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:elevation="0dp"
        android:orientation="vertical"
        app:liftOnScroll="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@null"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_scrollFlags="scroll|enterAlways"
            app:navigationIcon="@drawable/ic_arrow_back" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageSwitcher
                android:id="@+id/wallpaperViewSwitcher"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/wallpaperPreviewImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <ImageView
                    android:id="@+id/wallpaperFullImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:visibility="gone"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

            </ImageSwitcher>

            <ProgressBar
                android:id="@+id/imageLoadProgressBar"
                style="@style/CircularDeterminateProgressBar"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:layout_constraintBottom_toBottomOf="@id/wallpaperViewSwitcher"
                app:layout_constraintLeft_toLeftOf="@id/wallpaperViewSwitcher"
                app:layout_constraintRight_toRightOf="@id/wallpaperViewSwitcher"
                app:layout_constraintTop_toTopOf="@id/wallpaperViewSwitcher"
                tools:progress="60" />

            <Button
                android:id="@+id/setOnHomeScreenButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/detailed_screen_set_as_wallpaper_button"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/wallpaperViewSwitcher" />

            <Button
                android:id="@+id/downloadButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="4dp"
                android:text="@string/detailed_screen_download_button"
                app:layout_constraintLeft_toLeftOf="@id/setOnHomeScreenButton"
                app:layout_constraintRight_toLeftOf="@id/shareButton"
                app:layout_constraintTop_toBottomOf="@id/setOnHomeScreenButton" />

            <Button
                android:id="@+id/shareButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/detailed_screen_share_button"
                app:layout_constraintLeft_toRightOf="@id/downloadButton"
                app:layout_constraintRight_toRightOf="@id/setOnHomeScreenButton"
                app:layout_constraintTop_toBottomOf="@id/setOnHomeScreenButton" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="700dp"
                app:layout_constraintRight_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/shareButton" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>